tests/ui/field_default_and_with.stderr
error: `default` and `with` are mutually exclusive on a field
 --> tests/ui/field_default_and_with.rs:5:3
  |
5 |   #[quickcheck(default, with = "whatever")]
  |   ^
